--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: '3.8'
 
 services:
   diarize:
-    command: tail -f /dev/null
-    #command: ['python','/app/diarize.py']
+   # command: tail -f /dev/null
+    command: ['python3','/app/diarize.py']
     # environment:
     #   POSTGRES_DB: db
     #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     #   POSTGRES_USER: ${POSTGRES_USER}
-    # build:
-    #   context: docker
-    #   dockerfile: DiarizeDockerfile
-    image: diarize:0.1
+    build:
+      context: docker
+      dockerfile: DiarizeDockerfile
+    # image: diarize:0.1
     #image: transcribe:0.0
     restart: unless-stopped
     runtime: nvidia
