--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,10 @@ services:
     #command: tail -f /dev/null
     command: ['python3','/app/diarize.py']
 
-    build:
-      context: docker
-      dockerfile: DiarizeDockerfile
-    # image: diarize:0.1
-    #image: transcribe:0.0
+    # build:
+    #   context: docker
+    #   dockerfile: DiarizeDockerfile
+    image: diarize:0.2
     restart: unless-stopped
     runtime: nvidia
     volumes:
@@ -23,7 +22,7 @@ services:
   transcribe:
     command: ['python3','/app/transcribe.py']
 
-    #command: tail -f /dev/null
+   # command: tail -f /dev/null
 
     # build:
       # context: docker
@@ -39,10 +38,10 @@ services:
   audio:
     command: tail -f /dev/null
 
-    build: 
-      context: docker
-      dockerfile: MainDockerfile
-    #image: audio:0.1
+    #build: 
+      # context: docker
+      # dockerfile: MainDockerfile
+    image: audio:0.2
     restart: unless-stopped
     runtime: nvidia
     volumes:
