--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.8'
 
 services:
   diarize:
-    #command: tail -f /dev/null
-    command: ['python3','/app/diarize.py']
+    command: tail -f /dev/null
+    #command: ['python3','/app/diarize.py']
 
-    # build:
-    #   context: docker
-    #   dockerfile: DiarizeDockerfile
-    image: diarize:0.2
+    build:
+      context: docker
+      dockerfile: DiarizeDockerfile
+    #image: diarize:0.2
     restart: unless-stopped
     runtime: nvidia
     volumes:
