--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,9 +64,9 @@ services:
     image: redis:latest
     restart: unless-stopped
     ports:
-      - "${REDIS_PORT}:6379" #needs to be exposed outside for remote connection of the main server
+      - "${AUDIO_REDIS_PORT}:6379" #needs to be exposed outside for remote connection of the main server
     volumes:
     - ${DATA_PATH}/docker_redis_audio:/data
 
 
- #docker-compose -f /home/dima/1/1_audio/docker-compose.yml -p 11 up -d
+ #docker compose -f /home/dima/0/1_audio/docker-compose.yml -p 01 up -d
