Add health check for streaming-queue service

--- a/.env_example
+++ b/.env_example
@@ -1,10 +1,12 @@
+# Base envs
+VOLUME_DATA_PATH=/path/to/data
+
 # ====== Settings for service (all are Optional) ==================
 SERVICE_VERSION=0.0.1_example
 SERVICE_NAME="Audio API"
-AUDIO_API_HOST="0.0.0.0"
-AUDIO_API_PORT=8000
+SERVICE_API_HOST="0.0.0.0"
+SERVICE_API_PORT=8000
 SERVICE_TOKEN=service_token
-DATA_PATH=path/to/data
 
 # ====== Settings for database (Redis) ==================
 REDIS_HOST=localhost
