--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,8 @@ services:
 
 
   transcribe:
-    command: ['python3','transcribe.py']
-    #command: tail -f /dev/null
+    #command: ['python3','transcribe.py']
+    command: tail -f /dev/null
 
     #build:
       # context: docker
@@ -84,10 +84,10 @@ services:
       STREAM_QUEUE_SERVICE_REQUEST_TIMEOUT: ${STREAM_QUEUE_SERVICE_REQUEST_TIMEOUT}
       STREAM_QUEUE_SERVICE_AUTH_TOKEN: ${STREAM_QUEUE_SERVICE_AUTH_TOKEN}
 
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${SERVICE_API_PORT}", "--reload"]
+    #command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${SERVICE_API_PORT}", "--reload"]
     extra_hosts:
       - "host.docker.internal:host-gateway" # to connect to host ports
-    #command: tail -f /dev/null
+    command: tail -f /dev/null
     volumes:
       - .:/usr/src/app
       - ../library:/usr/src/library
