Fix event handling

--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,6 @@
 # Base envs
 VOLUME_DATA_PATH=/path/to/data
+CHECK_AND_PROCESS_CONNECTIONS_INTERVAL_SEC=2.0
 
 # ====== Settings for service (all are Optional) ==================
 SERVICE_VERSION=0.0.1_example
