Fix docker-compose build for redis

--- a/.env_example
+++ b/.env_example
@@ -13,6 +13,7 @@ SERVICE_TOKEN=service_token
 REDIS_HOST=localhost
 REDIS_PORT=26379
 REDIS_PASSWORD=passwd
+REDIS_IMAGE_PORT=26379
 
 # ====== Settings for external APIs (audio/streamqueue/etc) ==================
 STREAM_QUEUE_SERVICE_LIST_CONNECTIONS=http://streamqueue-service-example:8000/api/v1/list_connections
