--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,13 @@ services:
   diarize:
     depends_on:
       - qdrant
-    command: tail -f /dev/null
-    #command: ['python3','diarize.py']
+    #command: tail -f /dev/null
+    command: ['python3','diarize.py']
 
-    build:
-      context: docker
-      dockerfile: DiarizeDockerfile
-    #image: diarize:0.2
+    # build:
+    #   context: docker
+    #   dockerfile: DiarizeDockerfile #add ffmpeg to Dockerfile
+    image: diarize:0.3
     restart: unless-stopped
     runtime: nvidia
     volumes:
@@ -36,14 +36,14 @@ services:
 
 
   transcribe:
-    #command: ['python3','transcribe.py']
-    command: tail -f /dev/null
+    command: ['python3','transcribe.py']
+    #command: tail -f /dev/null
 
     #build:
       # context: docker
       # dockerfile: TranscribeDockerfile
       ### error  libcublas.so.12 is not found or cannot be loaded
-    image: transcribe:0.1
+    image: transcribe:0.2
     restart: unless-stopped
     runtime: nvidia
     volumes:
@@ -84,8 +84,8 @@ services:
       STREAM_QUEUE_SERVICE_REQUEST_TIMEOUT: ${STREAM_QUEUE_SERVICE_REQUEST_TIMEOUT}
       STREAM_QUEUE_SERVICE_AUTH_TOKEN: ${STREAM_QUEUE_SERVICE_AUTH_TOKEN}
 
-      # command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${SERVICE_API_PORT}", "--reload"]
-    command: tail -f /dev/null
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${SERVICE_API_PORT}", "--reload"]
+    #command: tail -f /dev/null
     extra_hosts:
       - "host.docker.internal:host-gateway" # to connect to host ports
     volumes:
