--- a/.env_example
+++ b/.env_example
@@ -15,6 +15,7 @@ REDIS_PORT=26379
 REDIS_PASSWORD=passwd
 REDIS_IMAGE_PORT=26379
 
+#@Andrew TODO: need to have variable port for stream_queue_service (8000)
 # ====== Settings for external APIs (audio/streamqueue/etc) ==================
 STREAM_QUEUE_SERVICE_LIST_CONNECTIONS=http://streamqueue-service-example:8000/api/v1/list_connections
 STREAM_QUEUE_SERVICE_FLUSH_CACHE=http://streamqueue-service-example:8000/api/v1/flush_cache
