Add logs to transcriber and diarizer

--- a/app/logger.conf
+++ b/app/logger.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,app
+keys=root,app,diarize,transcribe
 
 [handlers]
 keys=consoleHandler
@@ -15,6 +15,19 @@ handlers=
 level=INFO
 handlers=consoleHandler
 qualname=app
+propagate=0
+
+[logger_diarize]
+level=INFO
+handlers=consoleHandler
+qualname=diarize
+propagate=0
+
+
+[logger_transcribe]
+level=INFO
+handlers=consoleHandler
+qualname=diarize
 propagate=0
 
 [handler_consoleHandler]
