Fix docker-compose depends_on

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
   diarize:
     depends_on:
       - qdrant
+      - redis
     #command: tail -f /dev/null
     command: ['python3','diarize.py']
 
@@ -36,6 +37,8 @@ services:
 
 
   transcribe:
+    depends_on:
+      - redis
     command: ['python3','transcribe.py']
     #command: tail -f /dev/null
 
