Minor logging fix

--- a/app/logger.conf
+++ b/app/logger.conf
@@ -27,7 +27,7 @@ propagate=0
 [logger_transcribe]
 level=INFO
 handlers=consoleHandler
-qualname=diarize
+qualname=transcribe
 propagate=0
 
 [handler_consoleHandler]
