--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
   redis:
     image: redis:latest
     restart: unless-stopped
-    ports:
-      - "${REDIS_IMAGE_PORT}:6379"
+    # ports:
+    #   - "${REDIS_IMAGE_PORT}:6379"
     volumes:
       - ${VOLUME_DATA_PATH}/docker_redis_audio:/data
 
