--- a/.env_example
+++ b/.env_example
@@ -9,6 +9,8 @@ SERVICE_API_HOST="0.0.0.0"
 SERVICE_API_PORT=8000
 SERVICE_TOKEN=service_token
 
+DEBUG=False
+
 # ====== Settings for database (Redis) ==================
 REDIS_HOST=localhost
 REDIS_PORT=26379
