--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,13 +67,14 @@ services:
     depends_on:
       - redis
     environment:
-      CHECK_AND_PROCESS_CONNECTIONS_INTERVAL_SEC: ${CHECK_AND_PROCESS_CONNECTIONS_INTERVAL_SEC}
-
       SERVICE_VERSION: ${SERVICE_VERSION}
       SERVICE_NAME: ${SERVICE_NAME}
       SERVICE_API_HOST: ${SERVICE_API_HOST}
       SERVICE_API_PORT: ${SERVICE_API_PORT}
       SERVICE_TOKEN: ${SERVICE_TOKEN}
+
+      DEBUG: ${DEBUG}
+      CHECK_AND_PROCESS_CONNECTIONS_INTERVAL_SEC: ${CHECK_AND_PROCESS_CONNECTIONS_INTERVAL_SEC}
 
       REDIS_HOST: ${REDIS_HOST}
       REDIS_PORT: ${REDIS_PORT}
