--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  qdrant:
-    image: qdrant/qdrant
-    restart: unless-stopped
-    volumes:
-      - ${VOLUME_DATA_PATH}/qdrant:/qdrant/storage
+  # qdrant:
+  #   image: qdrant/qdrant
+  #   restart: unless-stopped
+  #   volumes:
+  #     - ${VOLUME_DATA_PATH}/qdrant:/qdrant/storage
 
   redis:
     image: redis:latest
@@ -17,7 +17,7 @@ services:
 
   diarize:
     depends_on:
-      - qdrant
+    #  - qdrant
       - redis
     #command: tail -f /dev/null
     command: ['python3','diarize.py']
