--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
 __pycache__/
+
+/.idea/
+__pycache__
 testdata/
-.env
 audio.egg-info/
+
+.venv/
+venv/
+
+*.py[ocd]
+.env*
+!.env_example
+
+*.log
+engine_
+audio.code-workspace
+tst
